feat: add endpoint to retrieve recipe by user ID
